[metadata]
name = NightOwl Network Development Platform
author = Song Pengjie
long_description = file: README.md
url = https://github.com/spengjie/nightowl
license = 'MIT'
version = '0.0.1'
platforms=['any'],

[options]
include_package_data = true  # enable manifest file
packages = find:
python_requires = >= 3.6
install_requires =
    apscheduler >= 3.7.0
    boto3
    celery
    flask
    furl
    mongoengine
    netaddr
    netmiko
    pycryptodome
    pymongo
    pytz
    pyyaml
    requests
    tablib[xlsx]

[options.extras_require]
test =
    coverage
    pytest
doc =
    sphinx
    sphinx-rtd-theme

[flake8]
max-line-length = 99

[tool:pytest]
testpaths = tests

[coverage:run]
source = nightowl

[coverage:report]
show_missing = true
